--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm i --prefix client && npm run build --prefix client"
     },
     "engines": {
-        "node": "11.14.0",
+        "node": "10.1.x",
         "npm": "5.0.3"
     },
     "author": "",
