--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,6 @@
     "private": true,
     "dependencies": {
         "axios": "^0.18.0",
-        "flv.js": "^1.5.0",
-        "http-proxy-middleware": "^0.19.1",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-redux": "^7.0.3",
@@ -24,6 +22,7 @@
     "eslintConfig": {
         "extends": "react-app"
     },
+    "proxy": "http://localhost:5000",
     "browserslist": {
         "production": [
             ">0.2%",
