--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "concurrently": "^4.1.0",
         "dotenv": "^8.0.0",
         "express": "^4.17.1",
-        "mongoose": "^5.5.12"
+        "mongoose": "^5.5.12",
+        "react-transition-group": "^4.1.1"
     }
 }
